--- a/01_機能一覧/機能一覧.md
+++ b/01_機能一覧/機能一覧.md
@@ -1,10 +1,32 @@
 # 機能一覧
 ## 仮称（System4）機能一覧
-### ・商品注文関連
-### ・会員情報関連
-### ・商品管理関連
-### ・会員管理関連
---------
+
+**1.商品注文関連**
+
+**2.会員情報関連**
+
+**3.商品管理関連**
+
+**4.会員管理関連**
+
 |番号|機能名|内容|データ入力|データ出力|備考|
-|---|-----|----|-------|--------|----|
-|1-1||||||
+|:---|:---|:---|:---:|:----:|:---|
+||||||||
+|1-1|商品一覧ページ|商品を一覧表示する||||
+|1-2|商品詳細ページ|説明文、商品画像を拡大表示<br>選択、カートへボタン表示|○|||
+|1-3|ショッピングカート|選択した商品を確認できる||○||
+|1-4|合計金額|合計金額を確認できる||○||
+|||||||
+|2-1|会員登録|クライアントの情報を登録する|○|||
+|2-2|ログイン|登録された情報を読み出す||○||
+|2-3|会員情報編集|登録した情報を変更する|○|○||
+|||||||
+|3-1|商品検索/一覧|管理者が商品を調べる||||
+|3-2|商品情報CSV出力/登録|商品情報をCSV出力と登録をする|○|○||
+|3-3|在庫情報|在庫情報を確認できる||○||
+|3-4|商品画像登録|商品の画像を登録できる|○|||
+|3-5|商品売り上げ|商品の売り上げが確認できる||○||
+|||||||
+|4-1|会員情報検索/一覧|会員情報を検索一覧できる||○||
+|4-2|会員情報CSV出力/登録|会員情報をCSV出力と登録できる|○|○||
+|4-3|会員情報編集|会員情報を編集できる|○|||
