--- a/05_画面詳細/画面詳細.md
+++ b/05_画面詳細/画面詳細.md
@@ -1,1 +1,34 @@
+###画面詳細図
+##トップページ
+###プロトタイプは以下のリンク先
+[プロトタイプ]
+*****
+<>
+
+*****
+補足:対応DBの列はDB設計後、oを対応するテーブル・カラム名に差し替えること。
+|ID|要素|内容|アクション|イベント|対応DB|
+|--|---|----|---------|-------|------|
+|1  |バナー|サイト名表示|-  |-   |-     |
+|2  |ログイン|テキスト画像|- |-  |-     |
+|3  |ID  |入力欄|テキスト入力|-  |〇|
+|4  |PASS|入力欄|テキスト入力|-  |〇|
+|5  |ログインボタン|ボタン|クリック|ログイン処理実行||
+|6  |商品検索|テキスト画像|-    |-     ||
+|7  |商品名|テキスト名|-    |-       ||
+|8  |商品名|入力欄|テキスト入力|-   |〇|
+|9  |カテゴリテキスト表示|-    |-     ||
+|10 |PC1|テキスト表示|-    |-     ||
+|11 |PC1|チェックボックス|選択|-   |〇|
+|12 |PC2|テキスト表示|-    |-     ||
+|13 |PC2|チェックボックス|選択|-   |〇|
+|14 |検索|ボタン|クリック|検索処理実行|〇|
+|15 |商品一覧|画像ボタン|クリック|商品一覧に遷移|〇|
+|16 |カートの中|画像ボタン|クリック|カートの中に遷移|〇|
+|17 |登録情報|画像ボタン|クリック|登録情報に遷移|〇|
+|18 |商品|商品一覧|テキスト表示|-     |-     |〇|
+|19 |商品画像|画像リンク|クリック|商品詳細に遷移|〇|
+|20 |商品名|テキストリンク|クリック|商品詳細に遷移|〇|
+|21 |価格|テキスト表示|-    |-     |〇|
+
 
