--- a/01_機能一覧/機能一覧.md
+++ b/01_機能一覧/機能一覧.md
@@ -1,5 +1,5 @@
 # 機能一覧
-## 仮称（System4）機能一覧
+##（System4）機能一覧
 
 **1.商品注文関連**
 
@@ -30,3 +30,4 @@
 |4-1|会員情報検索/一覧|会員情報を検索一覧できる||○||
 |4-2|会員情報CSV出力/登録|会員情報をCSV出力と登録できる|○|○||
 |4-3|会員情報編集|会員情報を編集できる|○|||
+|4-4|お気に入り|お気に入りページの編集|○|||
