--- a/02_業務フロー/検索(会員情報).md
+++ b/02_業務フロー/検索(会員情報).md
@@ -1,12 +1,12 @@
 ```uml
 @startuml
-ユーザー -> webサーバー : 検索(商品名)
-webサーバー -> DBサーバー : 検索処理(商品名)
+ユーザー -> webサーバー : 検索(ユーザー名)
+webサーバー -> DBサーバー : 検索処理(ユーザー名)
 DBサーバー -> DBサーバー : 検索処理
 DBサーバー -> webサーバー : 検索結果
 
 alt 検索一致
- webサーバー -> ユーザー : 検索結果を表示
+ webサーバー -> ユーザー : 会員情報を表示
 else 検索不一致
  webサーバー -> ユーザー : 検索失敗メッセージを表示
  
