--- a/02_業務フロー/会員情報編集.md
+++ b/02_業務フロー/会員情報編集.md
@@ -15,11 +15,18 @@ webサーバー -> ユーザー : 失敗メッセージを表示
 end
 
 opt ログイン中
-ユーザー -> webサーバー : ログアウト
-webサーバー -> DBサーバー : ログアウト照会
-DBサーバー -> DBサーバー : ログアウト処理
-DBサーバー -> webサーバー : ログアウト結果
-webサーバー -> ユーザー : ログアウト結果
+ユーザー -> webサーバー : 編集(会員情報)
+webサーバー -> DBサーバー : 編集処理(会員情報)
+DBサーバー -> DBサーバー : 編集処理
+DBサーバー -> webサーバー : 編集結果
+webサーバー -> ユーザー : 編集結果
+
+alt 編集成功
+webサーバー -> ユーザー : 編集結果を表示
+else 編集失敗
+webサーバー -> ユーザー : 編集失敗メッセージを表示
+end
+
 end
 
 @enduml
