--- a/01_機能一覧/機能一覧.md
+++ b/01_機能一覧/機能一覧.md
@@ -9,15 +9,15 @@
 
 **4.会員管理関連**
 
-||分類|番号|機能名|内容|データ入力|データ出力|備考|
+|大分類|分類|番号|機能名|内容|データ入力|データ出力|備考|
 |:---|:---|:---|:---|:---|:---:|:----:|:---|
 ||||||||||
-|\商品注文|1-1|商品一覧ページ|商品を一覧表示する||||
+|商品情報|商品注文|1-1|商品一覧ページ|商品を一覧表示する||||
 |||1-2|商品詳細ページ|説明文、商品画像を拡大表示<br>選択、カートへボタン表示|○|||
 |||1-3|ショッピングカート|選択した商品を確認できる||○||
 |||1-4|合計金額|合計金額を確認できる||○||
 |||||||||
-||会員情報|2-1|会員登録|クライアントの情報を登録する|○|||
+|情報管理|会員情報|2-1|会員登録|クライアントの情報を登録する|○|||
 |||2-2|ログイン|登録された情報を読み出す||○||
 |||2-3|会員情報編集|登録した情報を変更する|○|○||
 |||||||||
