--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -3,11 +3,20 @@
 @startuml
 [*] -> トップページ 
 
+会員登録 -->　トップページ : トップページをクリック
+会員登録 --> 会員情報 :登録完了をクリック
+会員登録 :entry/会員情報入力画面を表示
+会員登録 :do/会員情報入力
+
 会員情報 --> トップページ : トップページをクリック/商品検索 
+会員情報 : entry/会員情報を表示
+会員情報 : update/会員情報を変更
+
 ログイン --> トップページ : トップページをクリック/商品検索 
 ログイン : entry/id.passwordを入力 
 ログイン : do/ログイン認証 
 
+トップページ --> 会員登録 : 会員登録をクリック
 トップページ --> トップページ : ログアウトをクリック 
 トップページ -> トップページ : 商品検索 
 トップページ -> 商品詳細 : 商品をクリック 
