--- a/02_業務フロー/注文.md
+++ b/02_業務フロー/注文.md
@@ -17,7 +17,7 @@ opt ログイン中
 webサーバー -> DBサーバー : カート内処理
 DBサーバー -> DBサーバー : カート内処理
 DBサーバー -> webサーバー : カート内結果
-webサーバー -> ユーザー : カート内結果
+webサーバー -> ユーザー : カート内を表示
 
 opt 注文
 ユーザー -> webサーバー : 注文
