--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -3,8 +3,8 @@
 @startuml
 [*] -> トップページ 
 
-会員登録 --> トップページ : トップページをクリック
-会員登録 --> 会員情報 :登録完了をクリック
+会員登録 -left-> トップページ : トップページをクリック
+会員登録 -left-> 会員情報 :登録完了をクリック
 会員登録 :entry/会員情報入力画面を表示
 会員登録 :do/会員情報入力
 
