--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -8,7 +8,7 @@
 会員登録 :entry/会員情報入力画面を表示
 会員登録 :do/会員情報入力
 
-会員情報 --> トップページ : トップページをクリック/商品検索 
+会員情報 -left-> トップページ : トップページをクリック/商品検索 
 会員情報 : entry/会員情報を表示
 会員情報 : update/会員情報を変更
 
