--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -21,8 +21,7 @@
 トップページ --> トップページ : ログアウトをクリック 
 トップページ -> トップページ : 商品検索 
 トップページ -> 商品詳細 : 商品をクリック 
-トップぺージ -left-> 会員情報 : 会員情報をクリック 
-トップページ -left-> ログイン : ログインをクリック 
+トップページ -right-> ログイン : ログインをクリック 
 トップページ --> カート内 : カートの中をクリック 
 トップページ --> テキスト : テキストを表示
 トップページ : do/商品一覧を表示 
