--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -12,7 +12,7 @@
 会員情報 : entry/会員情報を表示
 会員情報 : update/会員情報を変更
 
-ログイン -right-> トップページ : トップページをクリック/商品検索 
+ログイン -up-> トップページ : トップページをクリック/商品検索 
 ログイン : entry/id.passwordを入力 
 ログイン : do/ログイン認証 
 
