--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -4,7 +4,7 @@
 [*] -> トップページ 
 
 会員登録 -left-> トップページ : トップページをクリック
-会員登録 -up-> 会員情報 :登録完了をクリック
+会員登録 -down-> 会員情報 :登録完了をクリック
 会員登録 :entry/会員情報入力画面を表示
 会員登録 :do/会員情報入力
 
@@ -12,7 +12,7 @@
 会員情報 : entry/会員情報を表示
 会員情報 : update/会員情報を変更
 
-ログイン -up-> トップページ : トップページをクリック/商品検索 
+ログイン -down-> トップページ : トップページをクリック/商品検索 
 ログイン : entry/id.passwordを入力 
 ログイン : do/ログイン認証 
 
