--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -17,11 +17,11 @@
 ログイン : do/ログイン認証 
 
 トップページ --> 会員登録 : 会員登録をクリック
-トップページ --> 会員情報 : 会員情報をクリック
+トップページ -left-> 会員情報 : 会員情報をクリック
 トップページ --> トップページ : ログアウトをクリック 
 トップページ -> トップページ : 商品検索 
 トップページ -> 商品詳細 : 商品をクリック 
-トップページ -right-> ログイン : ログインをクリック 
+トップページ -up-> ログイン : ログインをクリック 
 トップページ --> カート内 : カートの中をクリック 
 トップページ --> テキスト : テキストを表示
 トップページ : do/商品一覧を表示 
