--- a/05_画面詳細/会員情報.md
+++ b/05_画面詳細/会員情報.md
@@ -1,1 +1,15 @@
+### 画面詳細図
+## 会員情報
+### プロトタイプは以下のリンク先
+[プロトタイプ]()
+*****
+<img src="./img/会員情報.png" width="500">
 
+*****。
+
+| ID | 要素 | 内容 | アクション | イベント | 対応DB |
+|----|------|------|------------|----------|--------|
+|1   |バーナー|サイト名表示|-    |-         |-       |
+|2   |SHOPPING-CART|テキスト表示|-    |-         |-       |
+|3   |カート内|テキスト表示|-    |-         |-       |
+|4   |カート内の商品がありません|テキスト表示|-    |-         |-     |
