--- a/05_画面詳細/商品詳細.md
+++ b/05_画面詳細/商品詳細.md
@@ -6,4 +6,37 @@
 
 [プロトタイプ]（）
 *****
+
 *****
+
+補足：対応DBの列はDB設計後、○を対応するテーブル・カラム名に差し替えること
+
+| ID | 検索 | 内容 | アクション | イベント | 対応DB |
+|1||||||
+|2||||||
+|3||||||
+|4||||||
+|5||||||
+|6||||||
+|7||||||
+|8||||||
+|9||||||
+|10||||||
+|11||||||
+|12||||||
+|13||||||
+|14||||||
+|15||||||
+|16||||||
+|17||||||
+|18||||||
+|19||||||
+|20||||||
+|21||||||
+|22||||||
+|23||||||
+|24||||||
+|25||||||
+|26||||||
+|27||||||
+|28||||||
