--- a/05_画面詳細/ログイン.md
+++ b/05_画面詳細/ログイン.md
@@ -2,5 +2,13 @@
 ## 会員情報
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/ZBReba9UB4XT2DDuA352MB/文房具サイト?node-id=0%3A1)
-
 *****
+<>
+*****
+補足:対応DBの列はDB設計後、oを対応するテーブル・カラム名に差し替えること。
+|ID|要素|内容|アクション|イベント|対応DB|
+|--|---|----|---------|-------|------|
+|1  |バナー|サイト名表示|-  |-   |-     |
+|2  |ログイン|テキスト画像|- |-  |-     |
+|3  |携帯電話/メールアドレス  |入力欄|テキスト入力|-  |〇|
+|4  |PASS|入力欄|テキスト入力|-  |〇|
