--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -11,4 +11,4 @@
 |注文|-|-|-|-|-|-|カート|-|-|-|-|-|-|-|-|-|-|-|
 |お届け先入力|-|-|-|-|-|-|-|-|-|-|-|-|-|-|お届け先入力内容確認|-|-|-|
 |お届け先入力内容確認|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|お届け先入力|購入完了|-|
-|購入完了|-|-|-|-|-|-|-|-|-|お届け先入力内容確認|-|-|-|-|-|-|-|トップページ|
+|購入完了|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
