--- a/05_画面詳細/会員情報.md
+++ b/05_画面詳細/会員情報.md
@@ -11,8 +11,8 @@
 補足:対応DBの列はDB設計後、oを対応するテーブル・カラム名に差し替えること。
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|------|------------|----------|--------|
-|||||||
-|||||||
+|1|バーナー|サイト名表示|-|-|-|
+|2|カートの中|画像ボタン|クリック|カートに遷移|〇|
 |||||||
 |||||||
 |||||||
