--- a/03_画面遷移図/画面遷移図.md
+++ b/03_画面遷移図/画面遷移図.md
@@ -9,8 +9,10 @@
 会員登録 :do/会員情報入力
 
 会員情報 -left-> トップページ : トップページをクリック/商品検索 
+会員情報 --> カート内 : カート内をクリック
 会員情報 : entry/会員情報を表示
 会員情報 : update/会員情報を変更
+
 
 ログイン -down-> トップページ : トップページをクリック/商品検索 
 ログイン : entry/id.passwordを入力 
