--- a/05_画面詳細/会員登録.md
+++ b/05_画面詳細/会員登録.md
@@ -17,4 +17,4 @@
 |4  |電話番号|入力欄|テキスト入力|-  |〇|
 |5  |Eメール|入力欄|テキスト入力|-  |〇|
 |6  |PASS|入力欄|テキスト入力|-  |〇|
-|5|完了ボタン|ボタン|クリック|-|-|
+|5|完了ボタン|ボタン|クリック|会員情報へ遷移|-|
