--- a/05_画面詳細/会員情報.md
+++ b/05_画面詳細/会員情報.md
@@ -13,11 +13,11 @@
 |----|------|------|------------|----------|--------|
 |1|バーナー|サイト名表示|-|-|-|
 |2|カートの中|画像ボタン|クリック|カートに遷移|〇|
-|||||||
-|||||||
-|||||||
-|||||||
-|||||||
-|||||||
+|3|会員情報|画像ボタン|クリック|会員情報に遷移|〇|
+|4|ログイン|画像ボタン|クリック|ログインに遷移|〇|
+|5|キーワードで検索|入力欄|テキスト入力|-|〇|
+|6||||||
+|7||||||
+|8||||||
 |||||||
 
