--- a/05_画面詳細/会員登録.md
+++ b/05_画面詳細/会員登録.md
@@ -12,9 +12,10 @@
 |ID|要素|内容|アクション|イベント|対応DB|
 |--|---|----|---------|-------|------|
 |1  |バナー|サイト名表示|-  |-   |-     |
-|2  |会員登録|テキスト画像|- |-  |-     |
-|3  |お名前|入力欄|テキスト入力|-  |〇|
-|4  |電話番号|入力欄|テキスト入力|-  |〇|
-|5  |Eメール|入力欄|テキスト入力|-  |〇|
-|6  |PASS|入力欄|テキスト入力|-  |〇|
-|5|完了ボタン|ボタン|クリック|会員情報へ遷移|-|
+|2  |キーワード検索|入力欄|-  |商品情報へ遷移   |-     |
+|3  |会員登録|テキスト画像|- |-  |-     |
+|4  |お名前|入力欄|テキスト入力|-  |〇|
+|5  |電話番号|入力欄|テキスト入力|-  |〇|
+|6  |Eメール|入力欄|テキスト入力|-  |〇|
+|7  |PASS|入力欄|テキスト入力|-  |〇|
+|8|完了ボタン|ボタン|クリック|会員情報へ遷移|-|
