--- a/05_画面詳細/トップページ.md
+++ b/05_画面詳細/トップページ.md
@@ -1,34 +1,20 @@
 ### 画面詳細図
 ## トップページ
 ### プロトタイプは以下のリンク先
-[プロトタイプ][プロトタイプ](https://www.figma.com/file/ZBReba9UB4XT2DDuA352MB/文房具サイト?node-id=0%3A1)
+[プロトタイプ](https://www.figma.com/file/ZBReba9UB4XT2DDuA352MB/文房具サイト?node-id=0%3A1)
 *****
+<img src="./img/トップページ.png" width="500">
 
 *****
-
-補足:対応DBの列はDB設計後、oを対応するテーブル・カラム名に差し替えること。
-|ID|要素|内容|アクション|イベント|対応DB|
-|--|---|----|---------|-------|------|
-|1  |バナー|サイト名表示|-  |-   |-     |
-|2  |ログイン|テキスト画像|- |-  |-     |
-|3  |ID  |入力欄|テキスト入力|-  |〇|
-|4  |PASS|入力欄|テキスト入力|-  |〇|
-|5  |ログインボタン|ボタン|クリック|ログイン処理実行||
-|6  |商品検索|テキスト画像|-    |-     ||
-|7  |商品名|テキスト名|-    |-       ||
-|8  |商品名|入力欄|テキスト入力|-   |〇|
-|9  |カテゴリテキスト表示|-    |-     ||
-|10 |PC1|テキスト表示|-    |-     ||
-|11 |PC1|チェックボックス|選択|-   |〇|
-|12 |PC2|テキスト表示|-    |-     ||
-|13 |PC2|チェックボックス|選択|-   |〇|
-|14 |検索|ボタン|クリック|検索処理実行|〇|
-|15 |商品一覧|画像ボタン|クリック|商品一覧に遷移|〇|
-|16 |カートの中|画像ボタン|クリック|カートの中に遷移|〇|
-|17 |登録情報|画像ボタン|クリック|登録情報に遷移|〇|
-|18 |商品|商品一覧|テキスト表示|-     |-     |〇|
-|19 |商品画像|画像リンク|クリック|商品詳細に遷移|〇|
-|20 |商品名|テキストリンク|クリック|商品詳細に遷移|〇|
-|21 |価格|テキスト表示|-    |-     |〇|
-
+捕捉：対応DBの列はDB設計後、○を対応するテーブル・カラム名に差し替えること。
+| ID | 要素 | 内容 | アクション | イベント | 対応DB |
+|----|------|-----|----------|---------|-------|
+|1   |バナー|サイト名表示|-     |-        |-      |
+|2   |カートの中|ボタン|クリック|カートに遷移|-|
+|2   |会員登録|ボタン|クリック|会員登録へ遷移|-|
+|2   |ログイン|ボタン|クリック   |ログイン画面へ遷移|-      |
+|4   |キーワード検索|入力欄|テキスト入力|-|-|
+|9   |カテゴリ|テキスト表示|-       |-       ||
+|7   |商品名|テキスト名|-          |-      ||
+|8   |商品名|入力欄|テキスト入力|-           |○|
 
