--- a/05_画面詳細/トップページ.md
+++ b/05_画面詳細/トップページ.md
@@ -11,10 +11,12 @@
 |----|------|-----|----------|---------|-------|
 |1   |バナー|サイト名表示|-     |-        |-      |
 |2   |カートの中|ボタン|クリック|カートに遷移|-|
-|2   |会員登録|ボタン|クリック|会員登録へ遷移|-|
-|2   |ログイン|ボタン|クリック   |ログイン画面へ遷移|-      |
-|4   |キーワード検索|入力欄|テキスト入力|-|-|
-|9   |カテゴリ|テキスト表示|-       |-       ||
-|7   |商品名|テキスト名|-          |-      ||
-|8   |商品名|入力欄|テキスト入力|-           |○|
+|3   |会員登録|ボタン|クリック|会員登録へ遷移|-|
+|4   |ログイン|ボタン|クリック   |ログイン画面へ遷移|-      |
+|5   |キーワード検索|入力欄|テキスト入力|-|-|
+|6   |カテゴリ|テキスト表示|-       |-       ||
+|7   |商品一覧|テキスト表示|-|-|-|
+|8   |商品画像|商品リンク|クリック |商品詳細へ遷移|〇|
+|7   |商品名|テキストリンク|クリック|商品詳細へ遷移   |〇      |
+|8   |価格|テキスト表示|-|-           |○|
 
