--- a/05_画面詳細/トップページ.md
+++ b/05_画面詳細/トップページ.md
@@ -14,9 +14,10 @@
 |3   |会員登録|ボタン|クリック|会員登録へ遷移|-|
 |4   |ログイン|ボタン|クリック   |ログイン画面へ遷移|-      |
 |5   |キーワード検索|入力欄|テキスト入力|-|-|
+|6   |検索ボタン|ボタン|クリック|検索処理実行|〇|
 |6   |カテゴリ|テキスト表示|-       |-       ||
-|7   |商品一覧|テキスト表示|-|-|-|
+|7   |商品一覧|テキスト表示|-|-|〇|
 |8   |商品画像|商品リンク|クリック |商品詳細へ遷移|〇|
 |7   |商品名|テキストリンク|クリック|商品詳細へ遷移   |〇      |
-|8   |価格|テキスト表示|-|-           |○|
+|8   |価格|テキスト表示|-|-           |〇|
 
