--- a/05_画面詳細/ログイン.md
+++ b/05_画面詳細/ログイン.md
@@ -15,4 +15,4 @@
 |2  |ログイン|テキスト画像|- |-  |-     |
 |3  |携帯電話/メールアドレス  |入力欄|テキスト入力|-  |〇|
 |4  |PASS|入力欄|テキスト入力|-  |〇|
-|5|ログインボタン|ボタン|クリック|トップページへ遷移|-|
+|5|ログインボタン|ボタン|クリック|トップページ(ログイン後)へ遷移|-|
