--- a/05_画面詳細/会員情報.md
+++ b/05_画面詳細/会員情報.md
@@ -12,12 +12,25 @@
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|------|------------|----------|--------|
 |1|バーナー|サイト名表示|-|-|-|
-|2|カートの中|画像ボタン|クリック|カートに遷移|〇|
+|2|カートの中|画像ボタン|クリック|カートの中に遷移|〇|
 |3|会員情報|画像ボタン|クリック|会員情報に遷移|〇|
 |4|ログイン|画像ボタン|クリック|ログインに遷移|〇|
 |5|キーワードで検索|入力欄|テキスト入力|-|〇|
-|6||||||
-|7||||||
-|8||||||
-|||||||
-
+|6|検索ボタン|ボタン|クリック|検索処理実行|〇|
+|7|カテゴリーで探す|テキスト表示|-|-|-|
+|8|鉛筆、ペン|画像ボタン|クリック|検索処理実行|〇|
+|9|消しゴム|画像ボタン|クリック|検索処理実行|〇|
+|10|会員情報|テキスト表示|-|-|-|
+|11|お名前:|テキスト表示|-|-|-|
+|12|設定されている名前|テキスト表示|-|-|〇|
+|13|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
+|14|電話番号:|テキスト表示|-|-|-|
+|15|設定されている電話番号|テキスト表示|-|-|〇|
+|16|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
+|17|Eメール:|テキスト表示|-|-|-|
+|18|設定されているEメール|テキスト表示|-|-|〇|
+|19|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
+|20|パスワード:|テキスト表示|-|-|-|
+|21|設定されているパスワード|テキスト表示|-|-|〇|
+|22|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
+|23|完了|画像ボタン|クリック|編集処理実行|〇|
