--- a/05_画面詳細/会員情報.md
+++ b/05_画面詳細/会員情報.md
@@ -21,16 +21,16 @@
 |8|鉛筆、ペン|画像ボタン|クリック|検索処理実行|〇|
 |9|消しゴム|画像ボタン|クリック|検索処理実行|〇|
 |10|会員情報|テキスト表示|-|-|-|
-|11|お名前:|テキスト表示|-|-|-|
+|11|お名前：|テキスト表示|-|-|-|
 |12|設定されている名前|テキスト表示|-|-|〇|
 |13|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
-|14|電話番号:|テキスト表示|-|-|-|
+|14|電話番号：|テキスト表示|-|-|-|
 |15|設定されている電話番号|テキスト表示|-|-|〇|
 |16|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
-|17|Eメール:|テキスト表示|-|-|-|
+|17|Eメール：|テキスト表示|-|-|-|
 |18|設定されているEメール|テキスト表示|-|-|〇|
 |19|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
-|20|パスワード:|テキスト表示|-|-|-|
+|20|パスワード：|テキスト表示|-|-|-|
 |21|設定されているパスワード|テキスト表示|-|-|〇|
 |22|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
 |23|完了|画像ボタン|クリック|編集処理実行|〇|
