--- a/05_画面詳細/入力内容の確認.md
+++ b/05_画面詳細/入力内容の確認.md
@@ -17,9 +17,18 @@
 |6   |キーワード検索|入力欄|テキスト入力|-|-|
 |7   |検索ボタン|ボタン|クリック|検索処理実行|〇|
 |8   |カテゴリ|テキスト表示|-       |-       ||
-|9   ||||||
-|10  ||||||
-|11  ||||||
-|12  ||||||
+|9   |入力内容の確認|テキスト表示|-|-|-|
+|10  |氏名|テキスト表示|-|-|-|
+|11  |氏名表示|テキスト表示|-|-|〇|
+|12  |電話番号|テキスト表示|-|-||
+|13  |電話番号表示|テキスト表示|-|-|〇|
+|14  |住所|テキスト表示|-|-|〇|
+|15  |住所表示|テキスト表示|-|-|〇|
+|16  ||||||
+|17  ||||||
+|18  ||||||
+|19  ||||||
+|20  ||||||
+|21  ||||||
 
 
