--- a/05_画面詳細/入力内容の確認.md
+++ b/05_画面詳細/入力内容の確認.md
@@ -22,7 +22,7 @@
 |11  |氏名表示|テキスト表示|-|-|〇|
 |12  |電話番号|テキスト表示|-|-||
 |13  |電話番号表示|テキスト表示|-|-|〇|
-|14  |住所|テキスト表示|-|-|〇|
+|14  |住所|テキスト表示|-|-|-|
 |15  |住所表示|テキスト表示|-|-|〇|
 |16  ||||||
 |17  ||||||
