--- a/05_画面詳細/カートの中.md
+++ b/05_画面詳細/カートの中.md
@@ -27,6 +27,6 @@
 ||商品画像|画像リンク|クリック|商品詳細に遷移|〇|
 ||商品名|テキストリンク|クリック|商品詳細に遷移|〇|
 ||価格|テキスト表示|-    |-     |〇|
-|数量|個数表示||||
+||数量|個数表示|||
 ||削除|削除ボタン|クリック|-   ||
 
