--- a/05_画面詳細/注文.md
+++ b/05_画面詳細/注文.md
@@ -1,7 +1,7 @@
 ### 画面詳細
 ## 注文
 ### プロトタイプは以下のリンク先
-[プロトタイプ]()
+[プロトタイプ](https://www.figma.com/proto/ZBReba9UB4XT2DDuA352MB/%E6%96%87%E6%88%BF%E5%85%B7%E3%82%B5%E3%82%A4%E3%83%88?node-id=42%3A146&scaling=scale-down&page-id=0%3A1&starting-point-node-id=42%3A146&show-proto-sidebar=1)
 *****
 <img src="img/注文.png">
 
