--- a/05_画面詳細/会員情報.md
+++ b/05_画面詳細/会員情報.md
@@ -11,27 +11,27 @@
 補足:対応DBの列はDB設計後、oを対応するテーブル・カラム名に差し替えること。
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|------|------------|----------|--------|
-|1|バーナー|サイト名表示|-|-|-|
-|2|名前　さん|テキスト表示|-|-|〇|
+|1|文房具サイト|テキストリンク|クリック|トップページに遷移|-|
+|2|名前　さん|テキスト表示|-|会員の名前を表示|〇|
 |3|カートの中|画像ボタン|クリック|カートの中に遷移|〇|
 |4|会員情報|画像ボタン|クリック|会員情報に遷移|〇|
-|5|ログイン|画像ボタン|クリック|ログインに遷移|〇|
+|5|ログアウト|画像ボタン|クリック|トップページに遷移|〇|
 |6|キーワードで検索|入力欄|テキスト入力|-|〇|
 |7|検索ボタン|ボタン|クリック|検索処理実行|〇|
 |8|カテゴリーで探す|テキスト表示|-|-|-|
-|9|鉛筆、ペン|画像ボタン|クリック|検索処理実行|〇|
-|10|消しゴム|画像ボタン|クリック|検索処理実行|〇|
+|9|鉛筆、ペン|テキストリンク|クリック|トップページ(ログイン後)に遷移し、商品をソートして表示|〇|
+|10|消しゴム|テキストリンク|クリック|トップページ(ログイン後)に遷移し、商品をソートして表示|〇|
 |11|会員情報|テキスト表示|-|-|-|
 |12|お名前：|テキスト表示|-|-|-|
-|13|設定されている名前|テキスト表示|-|-|〇|
+|13|設定されている名前|テキスト表示|-|会員の名前を表示|〇|
 |14|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
 |15|電話番号：|テキスト表示|-|-|-|
-|16|設定されている電話番号|テキスト表示|-|-|〇|
+|16|設定されている電話番号|テキスト表示|-|会員の電話番号を表示|〇|
 |17|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
 |18|Eメール：|テキスト表示|-|-|-|
-|19|設定されているEメール|テキスト表示|-|-|〇|
+|19|設定されているEメール|テキスト表示|-|会員のEメールを表示|〇|
 |20|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
 |21|パスワード：|テキスト表示|-|-|-|
-|22|設定されているパスワード|テキスト表示|-|-|〇|
+|22|設定されているパスワード|テキスト表示|-|会員のパスワードを表示|〇|
 |23|編集|画像ボタン|クリック|設定テキストを入力欄に変更|〇|
 |24|完了|画像ボタン|クリック|編集処理実行|〇|
