--- a/05_画面詳細/購入完了.md
+++ b/05_画面詳細/購入完了.md
@@ -17,8 +17,8 @@
 |6   |キーワード検索|入力欄|テキスト入力|-|-|
 |7   |検索ボタン|ボタン|クリック|検索処理実行|〇|
 |8   |カテゴリ|テキスト表示|-       |-       ||
-|9   ||||||
-|10  ||||||
+|9   |購入が完了しました|テキスト表示|-|-|-|
+|10  |購入完了の文|テキスト表示|-|-|-|
 |11  ||||||
 |12  ||||||
 
