--- a/05_画面詳細/商品詳細.md
+++ b/05_画面詳細/商品詳細.md
@@ -4,8 +4,10 @@
 
 ### プロトタイプは以下のリンク先
 
-[プロトタイプ]（）
+[プロトタイプ]（https://www.figma.com/file/ZBReba9UB4XT2DDuA352MB/文房具サイト?node-id=0%3A1）
 *****
+
+<img src="img/商品詳細.png" width=500>
 
 *****
 
@@ -25,19 +27,4 @@
 |10|商品名|テキスト表示||||
 |11|金額|テキスト表示||||
 |12|数量|ラジオボタン||||
-|13|カートに入れる|||||
-|14||||||
-|15||||||
-|16||||||
-|17||||||
-|18||||||
-|19||||||
-|20||||||
-|21||||||
-|22||||||
-|23||||||
-|24||||||
-|25||||||
-|26||||||
-|27||||||
-|28||||||
+|13|カートに入れる|ボタン|カートに追加|||
