--- a/05_画面詳細/入力内容の確認.md
+++ b/05_画面詳細/入力内容の確認.md
@@ -24,10 +24,10 @@
 |13  |電話番号表示|テキスト表示|-|-|〇|
 |14  |住所|テキスト表示|-|-|-|
 |15  |住所表示|テキスト表示|-|-|〇|
-|16  ||||||
-|17  ||||||
-|18  ||||||
-|19  ||||||
+|16  |商品画像|画像表示|-|-|〇？|
+|17  |商品名|商品名表示|-|-|〇|
+|18  |商品金額表示|金額表示|-|-|〇|
+|19  |修正|修正テキスト表示|-||-|
 |20  ||||||
 |21  ||||||
 
