--- a/05_画面詳細/入力内容の確認.md
+++ b/05_画面詳細/入力内容の確認.md
@@ -27,8 +27,8 @@
 |16  |商品画像|画像表示|-|-|〇？|
 |17  |商品名|商品名表示|-|-|〇|
 |18  |商品金額表示|金額表示|-|-|〇|
-|19  |修正|修正テキスト表示|-||-|
-|20  ||||||
-|21  ||||||
+|19  |修正|ボタン|-|カートの中へ遷移|-|
+|20  |注文確定|ボタン|-|購入完了へ遷移|-|
+
 
 
