--- a/05_画面詳細/商品詳細ログイン後.md
+++ b/05_画面詳細/商品詳細ログイン後.md
@@ -19,12 +19,13 @@
 |2|カテゴリ|テキスト表示||||
 |3|鉛筆、ペン|ボタン||||
 |4|消しゴム|ボタン||||
-|5|会員情報|ボタン||||
-|6|ログイン|ボタン||||
-|7|キーワード検索|ボタン||||
-|8|キーワード検索|入力値|テキスト入力|||
-|9|商品画像|画像||||
-|10|商品名|テキスト表示||||
-|11|金額|テキスト表示||||
-|12|数量|ラジオボタン||||
-|13|カートに入れる|ボタン|カートに追加|||
+|5|名前 さん|会員の名前表示|||〇|
+|6|会員情報|ボタン||||
+|7|ログイン|ボタン||||
+|8|キーワード検索|ボタン||||
+|9|キーワード検索|入力値|テキスト入力|||
+|10|商品画像|画像||||
+|11|商品名|テキスト表示||||
+|12|金額|テキスト表示||||
+|13|数量|ラジオボタン||||
+|14|カートに入れる|ボタン|カートに追加|||
