--- a/05_画面詳細/商品詳細ログイン後.md
+++ b/05_画面詳細/商品詳細ログイン後.md
@@ -20,13 +20,13 @@
 |3|鉛筆、ペン|ボタン||||
 |4|消しゴム|ボタン||||
 |5|名前 さん|会員の名前表示|||〇|
-|6|カートの中|ボタン||||
-|6|会員情報|ボタン||||
-|7|ログイン|ボタン||||
-|8|キーワード検索|ボタン||||
+|6|カートの中|ボタン|クリック|カートに遷移||
+|6|会員情報|ボタン|クリック|会員情報へ遷移||
+|7|ログイン|ボタン|クリック|ログイン画面へ遷移||
+|8|キーワード検索|ボタン|クリック|検索処理実行||
 |9|キーワード検索|入力値|テキスト入力|||
 |10|商品画像|画像||||
-|11|商品名|テキスト表示||||
-|12|金額|テキスト表示||||
+|11|商品名|テキスト表示|||〇|
+|12|金額|テキスト表示|||〇|
 |13|数量|ラジオボタン||||
 |14|カートに入れる|ボタン|カートに追加|||
