--- a/05_画面詳細/購入完了.md
+++ b/05_画面詳細/購入完了.md
@@ -12,7 +12,7 @@
 |1   |バナー|サイト名表示|-     |-        |-      |
 |2   |名前|テキスト表示|-|-|-|
 |3   |カートの中|ボタン|クリック|カートに遷移|-|
-|4   |会員登録|ボタン|クリック|会員登録へ遷移|-|
+|4   |会員情報|ボタン|クリック|会員情報へ遷移|-|
 |5   |ログアウト|ボタン|クリック   |トップページへ遷移|-      |
 |6   |キーワード検索|入力欄|テキスト入力|-|-|
 |7   |検索ボタン|ボタン|クリック|検索処理実行|〇|
