--- a/05_画面詳細/会員登録.md
+++ b/05_画面詳細/会員登録.md
@@ -11,11 +11,11 @@
 補足:対応DBの列はDB設計後、oを対応するテーブル・カラム名に差し替えること。
 |ID|要素|内容|アクション|イベント|対応DB|
 |--|---|----|---------|-------|------|
-|1  |バナー|サイト名表示|-  |-   |-     |
+|1  |バナー|サイト名表示|クリック  |トップページへ遷移   |-     |
 |2  |キーワード検索|入力欄|テキスト入力  |商品詳細へ遷移   |-     |
 |3  |会員登録|テキスト画像|- |-  |-     |
-|4  |お名前|入力欄|テキスト入力|-  |〇|
-|5  |電話番号|入力欄|テキスト入力|-  |〇|
-|6  |Eメール|入力欄|テキスト入力|-  |〇|
-|7  |PASS|入力欄|テキスト入力|-  |〇|
-|8|完了ボタン|ボタン|クリック|会員情報へ遷移|-|
+|4  |お名前|入力欄|テキスト入力|-  |-|
+|5  |電話番号|入力欄|テキスト入力|-  |-|
+|6  |Eメール|入力欄|テキスト入力|-  |-|
+|7  |PASS|入力欄|テキスト入力|-  |-|
+|8|完了ボタン|ボタン|クリック|会員情報へ遷移|〇|
