--- a/05_画面詳細/入力内容の確認.md
+++ b/05_画面詳細/入力内容の確認.md
@@ -9,7 +9,7 @@
 捕捉：対応DBの列はDB設計後、○を対応するテーブル・カラム名に差し替えること。
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|-----|----------|---------|-------|
-|1   |バナー|サイト名表示|-     |-        |-      |
+|1   |バナー|サイト名表示|クリック     |トップページログイン後へ遷移        |-      |
 |2   |名前|テキスト表示|-|-|-|
 |3   |カートの中|ボタン|クリック|カートに遷移|-|
 |4   |会員情報|ボタン|クリック|会員情報へ遷移|-|
