--- a/05_画面詳細/商品詳細ログイン後.md
+++ b/05_画面詳細/商品詳細ログイン後.md
@@ -15,13 +15,13 @@
 
 | ID | 検索 | 内容 | アクション | イベント | 対応DB |
 |----|-----|------|---------|-------|-------|
-|1|バナー　|サイト名表示||||
+|1|バナー　|サイト名表示|クリック|トップページログイン後へ遷移||
 |2|カテゴリ|テキスト表示||||
 |3|鉛筆、ペン|ボタン||||
 |4|消しゴム|ボタン||||
 |5|名前 さん|会員の名前表示|||〇|
 |6|カートの中|ボタン|クリック|カートに遷移||
-|6|会員情報|ボタン|クリック|会員情報へ遷移||
+|6|会員情報|ボタン|クリック|会員情報へ遷移|〇|
 |7|ログイン|ボタン|クリック|ログイン画面へ遷移||
 |8|キーワード検索|ボタン|クリック|検索処理実行||
 |9|キーワード検索|入力値|テキスト入力|||
