--- a/05_画面詳細/購入完了.md
+++ b/05_画面詳細/購入完了.md
@@ -9,10 +9,10 @@
 捕捉：対応DBの列はDB設計後、○を対応するテーブル・カラム名に差し替えること。
 | ID | 要素 | 内容 | アクション | イベント | 対応DB |
 |----|------|-----|----------|---------|-------|
-|1   |バナー|サイト名表示|-     |-        |-      |
-|2   |名前|テキスト表示|-|-|-|
+|1   |バナー|サイト名表示|クリック     |トップページログイン後へ遷移        |-      |
+|2   |名前|テキスト表示|-|-|〇|
 |3   |カートの中|ボタン|クリック|カートに遷移|-|
-|4   |会員情報|ボタン|クリック|会員情報へ遷移|-|
+|4   |会員情報|ボタン|クリック|会員情報へ遷移|〇|
 |5   |ログアウト|ボタン|クリック   |トップページへ遷移|-      |
 |6   |キーワード検索|入力欄|テキスト入力|-|-|
 |7   |検索ボタン|ボタン|クリック|検索処理実行|〇|
