--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -1,5 +1,18 @@
 ```uml
 @startuml
+
+ユーザー -> webサーバー : 検索(商品名)
+webサーバー -> DBサーバー : 検索処理(商品名)
+DBサーバー -> DBサーバー : 検索処理
+DBサーバー -> webサーバー : 検索結果
+
+alt 検索一致
+ webサーバー -> ユーザー : 検索結果を表示
+else 検索不一致
+ webサーバー -> ユーザー : 検索失敗メッセージを表示
+ end
+ 
+ 
 opt 未登録
 ユーザー -> webサーバー : ユーザー登録
 webサーバー -> DBサーバー : ユーザー登録
