--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -40,6 +40,19 @@ else 認証失敗
 webサーバー -> ユーザー : 失敗メッセージを表示
 end
 opt ログイン中
+
+ユーザー -> webサーバー : 編集(会員情報)
+webサーバー -> DBサーバー : 編集処理(会員情報)
+DBサーバー -> DBサーバー : 編集処理
+DBサーバー -> webサーバー : 編集結果
+
+alt 編集成功
+webサーバー -> ユーザー : 編集結果を表示
+else 編集失敗
+webサーバー -> ユーザー : 編集失敗メッセージを表示
+end
+
+
 ユーザー -> webサーバー : ログアウト
 webサーバー -> DBサーバー : ログアウト照会
 DBサーバー -> DBサーバー : ログアウト処理
