--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -6,6 +6,12 @@ webサーバー -> DBサーバー : 検索処理(商品名)
 DBサーバー -> DBサーバー : 検索処理
 DBサーバー -> webサーバー : 検索結果
 
+ユーザー -> webサーバー : カートに入れる
+webサーバー -> DBサーバー : カート内処理
+DBサーバー -> DBサーバー : カート内処理
+DBサーバー -> webサーバー : カート内結果
+webサーバー -> ユーザー : カート内を表示
+
 alt 検索一致
  webサーバー -> ユーザー : 検索結果を表示
 else 検索不一致
@@ -61,6 +67,18 @@ webサーバー -> DBサーバー : ログアウト照会
 DBサーバー -> DBサーバー : ログアウト処理
 DBサーバー -> webサーバー : ログアウト結果
 webサーバー -> ユーザー : ログアウト結果
+end
+
+opt 注文
+ユーザー -> webサーバー : 注文
+webサーバー -> DBサーバー : 注文処理
+DBサーバー -> DBサーバー : 注文処理
+DBサーバー -> webサーバー : 注文結果
+alt 注文確定
+webサーバー -> ユーザー : 注文内容を表示
+else 注文不確定
+webサーバー -> ユーザー : 失敗メッセージを表示
+end
 end
 
 end
