--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -46,6 +46,13 @@ webサーバー -> ユーザー : 失敗メッセージを表示
 end
 opt ログイン中
 
+opt 会員情報
+ユーザー -> webサーバー : 検索(ユーザ)
+webサーバー -> DBサーバー : 検索処理(ユーザー)
+DBサーバー -> DBサーバー : 検索処理
+DBサーバー -> webサーバー : 検索結果
+webサーバー -> ユーザー : ユーザー名を表示
+
 opt 会員情報編集
 ユーザー -> webサーバー : 編集(会員情報)
 webサーバー -> DBサーバー : 編集処理(会員情報)
