--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -44,6 +44,7 @@ webサーバー -> ユーザー : ユーザー名を表示
 else 認証失敗
 webサーバー -> ユーザー : 失敗メッセージを表示
 end
+
 opt ログイン中
 
 opt 会員情報
@@ -52,6 +53,8 @@ webサーバー -> DBサーバー : 検索処理(ユーザー)
 DBサーバー -> DBサーバー : 検索処理
 DBサーバー -> webサーバー : 検索結果
 webサーバー -> ユーザー : ユーザー名を表示
+
+end
 
 opt 会員情報編集
 ユーザー -> webサーバー : 編集(会員情報)
@@ -77,6 +80,7 @@ webサーバー -> ユーザー : 注文内容を表示
 else 注文不確定
 webサーバー -> ユーザー : 失敗メッセージを表示
 end
+
 end
 
 opt ログアウト
@@ -85,6 +89,7 @@ webサーバー -> DBサーバー : ログアウト照会
 DBサーバー -> DBサーバー : ログアウト処理
 DBサーバー -> webサーバー : ログアウト結果
 webサーバー -> ユーザー : ログアウト結果
+
 end
 
 end
