--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -1,6 +1,7 @@
 ```uml
 @startuml
 
+opt 商品検索
 ユーザー -> webサーバー : 検索(商品名)
 webサーバー -> DBサーバー : 検索処理(商品名)
 DBサーバー -> DBサーバー : 検索処理
@@ -12,10 +13,14 @@ else 検索不一致
  webサーバー -> ユーザー : 検索失敗メッセージを表示
  end
  
+ end
+ 
+opt カート内
 ユーザー -> webサーバー : カートに入れる
 webサーバー -> ユーザー : カート内を表示
+end
 
-opt 未登録
+opt ユーザー未登録
 ユーザー -> webサーバー : ユーザー登録
 webサーバー -> DBサーバー : ユーザー登録
 DBサーバー -> DBサーバー : 登録処理
