--- a/02_業務フロー/業務フロー.md
+++ b/02_業務フロー/業務フロー.md
@@ -5,15 +5,15 @@ opt 商品検索
 ユーザー -> webサーバー : 検索(商品名)
 webサーバー -> DBサーバー : 検索処理(商品名)
 DBサーバー -> DBサーバー : 検索処理
-DBサーバー -> webサーバー : 検索結果
+DBサーバー -> webサーバー : 商品詳細出力
 
 alt 検索一致
- webサーバー -> ユーザー : 検索結果を表示
+ webサーバー -> ユーザー : 商品詳細を表示
 else 検索不一致
  webサーバー -> ユーザー : 検索失敗メッセージを表示
  end
  
- end
+end
  
 opt カート内
 ユーザー -> webサーバー : カートに入れる
