--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -1,5 +1,5 @@
 ## 画面遷移表
-|画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カート|カートに入れる|数量変更|商品削除|注文|入力内容を確認|修正|注文確定|トップページ|
+|画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カート|カートに入れる|注文|入力内容を確認|修正|注文確定|トップページ|完了|
 |----------------|-------|----------|--------|--------|-------|--------|------|-------------|--------|--------|----|-------------|-------------|------------|
 |トップページログイン前|ログイン|-|トップページログイン前|商品詳細|会員登録|-|-|-|-|-|-|-|-|-|トップページログイン前|
 |トップページログイン後|-|トップページログイン前|トップページログイン後|商品詳細|-|会員情報|カート内|-|-|-|-|-|-|-|トップページログイン後|
