--- a/05_画面詳細/商品一覧ログイン後.md
+++ b/05_画面詳細/商品一覧ログイン後.md
@@ -3,7 +3,7 @@
 ### プロトタイプは以下のリンク先
 [プロトタイプ](https://www.figma.com/file/ZBReba9UB4XT2DDuA352MB/文房具サイト?node-id=0%3A1)
 *****
-<img src="./img/トップページ(ログイン後).png" width="500">
+<img src="./img/商品一覧ログイン後.png" width="500">
 
 *****
 捕捉：対応DBの列はDB設計後、○を対応するテーブル・カラム名に差し替えること。
