--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -1,16 +1,14 @@
 ## 画面遷移表
-|画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カート|カートに入れる|注文|入力内容を確認|修正|注文確定|トップページ|完了|
+|画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カートの中|カートに入れる|注文する|入力内容の確認|修正|注文確定|トップページ|完了|
 |----------------|-------|----------|--------|--------|-------|--------|------|-------------|--------|--------|----|-------------|-------------|------------|
 |トップページログイン前|ログイン|-|トップページログイン前|商品詳細|会員登録|-|-|-|-|-|-|-|-|-|トップページログイン前|
 |トップページログイン後|-|トップページログイン前|トップページログイン後|商品詳細|-|会員情報|カート内|-|-|-|-|-|-|-|トップページログイン後|
 |会員登録|-|-|トップページログイン前|-|-|-|-|-|-|-|-|-|-|-|トップページ|
-|会員情報|-|トップぺージログイン前|トップページログイン後|-|-|会員情報|カート内|-|-|-|-|-|-|-|トップページ|
+|会員情報|-|トップぺージログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|
 |ログイン|トップページログイン後|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
-|商品詳細ログイン前|ログイン|-|トップぺージログイン前|-|会員登録|-|-|ログイン||トップページ|-|-|-|-|-|-|-|トップページ|
-|商品詳細ログイン後||||||||||||||||||||||||||||||||
-|カート内|-|トップページ|トップページ|-|-|-|-|-|-|-|商品詳細|-|-|-|-|-|-|トップページ|
-|カート|-|-|-|-|-|-|-|-|-|-|-|カート|カート|注文|-|-|-|-|-|
-|注文|-|-|-|-|-|-|カート|-|-|-|-|-|-|-|-|-|-|-|
-|お届け先入力|-|-|-|-|-|-|-|-|-|-|-|-|-|-|お届け先入力内容確認|-|-|-|
-|お届け先入力内容確認|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|お届け先入力|購入完了|-|
-|購入完了|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
+|商品詳細ログイン前|ログイン|-|トップぺージログイン前|-|会員登録|-|-|ログイン|-|-|-|-|トップページログイン前|-|
+|商品詳細ログイン後|-|トップページログイン前|トップページログイン後|-|-|会員情報|-|カート内|-|-|-|-|-|トップページログイン後|-|
+|カート内|-|トップページログイン前|-|-|-|会員情報|カートの中|-|注文|-|-|-|トップページログイン後|-|
+|注文|-|トップページログイン前|-|-|-|会員情報|カートの中|-|-|入力内容の確認|-|-|トップページログイン後|-|
+|入力内容の確認|-|トップページログイン後|トップページログイン後|-|-|会員情報|カートの中|-|-|-|注文|購入完了|トップページログイン後|-|
+|購入完了|-|トップページログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|
