--- a/05_画面詳細/トップページ.md
+++ b/05_画面詳細/トップページ.md
@@ -16,8 +16,8 @@
 |5   |キーワード検索|入力欄|テキスト入力|-|-|
 |6   |検索ボタン|ボタン|クリック|検索処理実行|〇|
 |7   |カテゴリ|テキスト表示|-       |-       ||
-|8   |人気商品|画像リンク|クリック|-|〇|
-|9   |キャンペーン商品|画像リンク|クリック|-|〇|
+|8   |人気商品|画像|-|-|〇|
+|9   |キャンペーン商品|画像|-|-|〇|
 |10   |商品一覧|テキスト表示|-|-|〇|
 |11   |商品画像|商品リンク|クリック |商品詳細へ遷移|〇|
 |12   |商品名|テキストリンク|クリック|商品詳細へ遷移   |〇      |
