--- a/05_画面詳細/トップページログイン後.md
+++ b/05_画面詳細/トップページログイン後.md
@@ -18,8 +18,8 @@
 |7   |検索ボタン|ボタン|クリック|検索処理実行|〇|
 |8   |カテゴリ|テキスト表示|-       |-       |〇|
 |9   |商品一覧|テキスト表示|-|-|〇|
-|10  |人気商品|画像リンク|クリック|-|〇|
-|11  |キャンペーン商品|画像リンク|クリック|-|〇|
+|10  |人気商品|画像|-|-|〇|
+|11  |キャンペーン商品|画像|-|-|〇|
 |12  |商品画像|商品リンク|クリック |商品詳細へ遷移|〇|
 |13  |商品名|テキストリンク|クリック|商品詳細へ遷移   |〇      |
 |14  |価格|テキスト表示|-|-           |〇|
