--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -7,7 +7,7 @@
 |会員情報|-|トップぺージログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|
 |ログイン|トップページログイン後|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
 |商品詳細ログイン前|ログイン|-|トップぺージログイン前|-|会員登録|-|-|ログイン|-|-|-|-|トップページログイン前|-|
-|商品詳細ログイン後|-|トップページログイン前|トップページログイン後|-|-|会員情報|-|カート内|-|-|-|-|-|トップページログイン後|-|
+|商品詳細ログイン後|-|トップページログイン前|トップページログイン後|-|-|会員情報|-|カートの中|-|-|-|-|トップページログイン後|-|
 |カート内|-|トップページログイン前|-|-|-|会員情報|カートの中|-|注文|-|-|-|トップページログイン後|-|
 |注文|-|トップページログイン前|-|-|-|会員情報|カートの中|-|-|入力内容の確認|-|-|トップページログイン後|-|
 |入力内容の確認|-|トップページログイン後|トップページログイン後|-|-|会員情報|カートの中|-|-|-|注文|購入完了|トップページログイン後|-|
