--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -3,8 +3,8 @@
 |----------------|-------|----------|--------|--------|-------|--------|----------|-------------|--------|--------------|----|--------|------------|----|
 |トップページログイン前|ログイン|-|トップページログイン前|商品詳細|会員登録|-|-|-|-|-|-|-|-|-|トップページログイン前|
 |トップページログイン後|-|トップページログイン前|トップページログイン後|商品詳細|-|会員情報|カート内|-|-|-|-|-|-|-|トップページログイン後|
-|会員登録|-|-|トップページログイン前|-|-|-|-|-|-|-|-|-|-|-|トップページ|
-|会員情報|-|トップぺージログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|
+|会員登録|-|-|トップページログイン前|-|-|-|-|-|-|-|-|-|-|-|トップページ|会員情報|
+|会員情報|-|トップぺージログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|商品一覧ログイン後|
 |ログイン|トップページログイン後|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
 |商品詳細ログイン前|ログイン|-|トップぺージログイン前|-|会員登録|-|-|ログイン|-|-|-|-|トップページログイン前|-|
 |商品詳細ログイン後|-|トップページログイン前|トップページログイン後|-|-|会員情報|-|カートの中|-|-|-|-|トップページログイン後|-|
