--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -1,14 +1,14 @@
 ## 画面遷移表
 |画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カートの中|カートに入れる|注文する|入力内容の確認|修正|注文確定|トップページ|完了|
 |----------------|-------|----------|--------|--------|-------|--------|----------|-------------|--------|--------------|----|--------|------------|----|
-|トップページログイン前|ログイン|-|トップページログイン前|商品詳細|会員登録|-|-|-|-|-|-|-|-|-|トップページログイン前|
-|トップページログイン後|-|トップページログイン前|トップページログイン後|商品詳細|-|会員情報|カート内|-|-|-|-|-|-|-|トップページログイン後|
-|会員登録|-|-|トップページログイン前|-|-|-|-|-|-|-|-|-|-|-|トップページ|会員情報|
-|会員情報|-|トップぺージログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|商品一覧ログイン後|
+|トップページ|ログイン|-|商品一覧|商品詳細|会員登録|-|-|-|-|-|-|-|-|-|トップページ|
+|トップページログイン後|-|トップページ|トップページログイン後|商品詳細|-|会員情報|カート内|-|-|-|-|-|-|-|トップページログイン後|
+|会員登録|-|-|トップページ|-|-|-|-|-|-|-|-|-|-|-|トップページ|会員情報|
+|会員情報|-|トップぺージ|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|商品一覧ログイン後|
 |ログイン|トップページログイン後|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
-|商品詳細ログイン前|ログイン|-|トップぺージログイン前|-|会員登録|-|-|ログイン|-|-|-|-|トップページログイン前|-|
-|商品詳細ログイン後|-|トップページログイン前|トップページログイン後|-|-|会員情報|-|カートの中|-|-|-|-|トップページログイン後|-|
-|カート内|-|トップページログイン前|-|-|-|会員情報|カートの中|-|注文|-|-|-|トップページログイン後|-|
+|商品詳細|ログイン|-|トップぺージ|-|会員登録|-|-|ログイン|-|-|-|-|トップページ|-|
+|商品詳細ログイン後|-|トップページ|トップページログイン後|-|-|会員情報|-|カートの中|-|-|-|-|トップページログイン後|-|
+|カート内|-|トップページ|-|-|-|会員情報|カートの中|-|注文|-|-|-|トップページログイン後|-|
 |注文|-|トップページログイン前|-|-|-|会員情報|カートの中|-|-|入力内容の確認|-|-|トップページログイン後|-|
 |入力内容の確認|-|トップページログイン後|トップページログイン後|-|-|会員情報|カートの中|-|-|-|注文|購入完了|トップページログイン後|-|
-|購入完了|-|トップページログイン前|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|
+|購入完了|-|トップページ|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|
