--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -1,11 +1,11 @@
 ## 画面遷移表
 |画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カートの中|カートに入れる|注文する|入力内容の確認|修正|注文確定|トップページ|完了|
 |----------------|-------|----------|--------|--------|-------|--------|----------|-------------|--------|--------------|----|--------|------------|----|
-|トップページ|ログイン|-|商品一覧|商品詳細|会員登録|-|-|-|-|-|-|-|-|-|トップページ|
-|トップページログイン後|-|トップページ|トップページログイン後|商品詳細|-|会員情報|カート内|-|-|-|-|-|-|-|トップページログイン後|
-|会員登録|-|-|トップページ|-|-|-|-|-|-|-|-|-|-|-|トップページ|会員情報|
-|会員情報|-|トップぺージ|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|-|-|トップページ|商品一覧ログイン後|
-|ログイン|トップページログイン後|-|-|-|-|-|-|-|-|-|-|-|-|-|トップページ|
+|トップページ|ログイン|-|商品一覧|商品詳細|会員登録|-|-|-|-|-|-|-|トップページ|-|
+|トップページログイン後|-|トップページ|商品一覧ログイン後|商品詳細ログイン後|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|
+|会員登録|-|-|商品一覧|-|-|-|-|-|-|-|-|-|トップページ|会員情報|
+|会員情報|-|トップぺージ|商品一覧ログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|商品一覧ログイン後|
+|ログイン|商品一覧ログイン後|-|-|-|-|-|-|-|-|-|-|-|トップページ|-|
 |商品詳細|ログイン|-|トップぺージ|-|会員登録|-|-|ログイン|-|-|-|-|トップページ|-|
 |商品詳細ログイン後|-|トップページ|トップページログイン後|-|-|会員情報|-|カートの中|-|-|-|-|トップページログイン後|-|
 |カート内|-|トップページ|-|-|-|会員情報|カートの中|-|注文|-|-|-|トップページログイン後|-|
