--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -10,5 +10,5 @@
 |商品詳細ログイン後|-|トップページ|トップページログイン後|-|-|会員情報|-|カートの中|-|-|-|-|トップページログイン後|-|
 |カート内|-|トップページ|-|-|-|会員情報|カートの中|-|注文|-|-|-|トップページログイン後|-|
 |注文|-|トップページ|-|-|-|会員情報|カートの中|-|-|入力内容の確認|-|-|トップページログイン後|-|
-|入力内容の確認|-|トップページ|トップページログイン後|-|-|会員情報|カートの中|-|-|-|注文|購入完了|トップページログイン後|-|
-|購入完了|-|トップページ|トップページログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|
+|入力内容の確認|-|トップページ|商品一覧ログイン後|-|-|会員情報|カートの中|-|-|-|注文|購入完了|トップページログイン後|-|
+|購入完了|-|トップページ|商品一覧ログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|
