--- a/04_画面遷移表/画面遷移表.md
+++ b/04_画面遷移表/画面遷移表.md
@@ -2,7 +2,7 @@
 |画面／アクション|ログイン|ログアウト|商品検索|商品画像|会員登録|会員情報|カートの中|カートに入れる|注文する|入力内容の確認|修正|注文確定|トップページ|完了|人気の商品|キャンペーン商品|
 |----------------|-------|----------|--------|--------|-------|--------|----------|-------------|--------|--------------|----|--------|------------|----|----------|---------------|
 |トップページ|ログイン|-|商品一覧|商品詳細|会員登録|-|-|-|-|-|-|-|トップページ|-|商品一覧|商品一覧|
-|トップページログイン後|-|トップページ|商品一覧ログイン後|商品詳細ログイン後|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|商品一覧|ログイン後|商品一覧ログイン後|
+|トップページログイン後|-|トップページ|商品一覧ログイン後|商品詳細ログイン後|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|-|商品一覧ログイン後|商品一覧ログイン後|
 |会員登録|-|-|商品一覧|-|-|-|-|-|-|-|-|-|トップページ|会員情報|-|-|
 |会員情報|-|トップぺージ|商品一覧ログイン後|-|-|会員情報|カートの中|-|-|-|-|-|トップページログイン後|商品一覧ログイン後|-|-|
 |ログイン|商品一覧ログイン後|-|-|-|-|-|-|-|-|-|-|-|トップページ|-|-|-|
